--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ejs": "~2.3.1",
     "express": "~4.12.4",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "^2.2.1"
   },
   "author": "Mariano J. Obarrio Miles",
   "license": "MIT",
